# DXVK-Manager

./: .gitattributes  .gitignore  BUILD.bat  BUILD_FIX.md  BUILD_FIX_COMPLETE.md  BUILD_INSTRUCTIONS.md  BUILD_SIMPLE.bat  CHANGELOG.md  DXVK_Manager.spec  FIXES_APPLIED.md  INSTALLER_GUIDE.md  LICENSE  QUICK_START.md  README.md  README_BUILD.md  REVIEW_SUGGESTIONS.md  REVIEW_SUMMARY.md  STORE_GUIDE.md  WINDOWS_IMPROVEMENTS.md  WINDOWS_REVIEW.md  build.sh  build_executable.py  build_installer.bat  dxvk_manager.py  dxvk_manager_log.json  exe_analyzer.py  file_manager.py  github_downloader.py  gui.py  logger.py  platform_utils.py  pyproject.toml  requirements.txt  setup.py  test_integration.py  test_modules.py
.github/workflows/: ci.yml
dxvk_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dxvk_manager_tool/: README.md  build_executable.py  design.md  gui.py  logger.py  todo.md
tests/: conftest.py  test_integration.py  test_modules.py
